# u4-ircd

./: .hgignore  AUTHORS  ChangeLog  Makefile  Makefile.am  TODO  configure.ac
docs/: CHANGELOG  CODINGSTYLE  TODO  configuration.txt  example.conf
etc/: unreal.conf  unrealircd4.conf  unrealircd4.conf.dist
include/: base.h  base.hpp  binder.hpp  bitmask.hpp  channel.h  channel.hpp  cmdmap.hpp  command.hpp  conf.h  config.hpp  epoll.hpp  exception.hpp  hash.hpp  internal.h  ioservice.hpp  ioservicepool.hpp  ircd.h  isupport.hpp  limits.hpp  list.hpp  listener.hpp  log.hpp  map.hpp  misc.h  mode.hpp  modebuf.hpp  module.h  module.hpp  modules.h  numeric.hpp  numerics.h  numerics.hpp  platform.hpp  pthread.hpp  reactor.hpp  reactorpool.hpp  recvq.hpp  resolver.hpp  server.hpp  signal.hpp  (+14 more)
include/cmd/: admin.hpp  help.hpp  info.hpp  insmod.hpp  kick.hpp  lusers.hpp  notice.hpp  ping.hpp  privmsg.hpp  quit.hpp  rehash.hpp  rmmod.hpp  userhost.hpp  version.hpp  whois.hpp  whowas.hpp
src/: Makefile  base.cpp  channel.cpp  channels.cpp  command.cpp  config.cpp  epoll.cpp  hash.cpp  ioservicepool.cpp  listener.cpp  log.cpp  main.cpp  misc.cpp  module.cpp  modules.cpp  pthread.cpp  reactorpool.cpp  recvq.cpp  resolver.cpp  server.cpp  socket.cpp  socketengine.cpp  string.cpp  stringlist.cpp  time.cpp  timer.cpp  unreal.cpp  user.cpp  users.cpp  version.cpp.in  wthread.cpp
src/cmd/: Makefile  Makefile.am  admin.cpp  away.cpp  cloak.cpp  help.cpp  info.cpp  insmod.cpp  invite.cpp  ison.cpp  join.cpp  kick.cpp  kill.cpp  list.cpp  lsmod.cpp  lusers.cpp  mode.cpp  motd.cpp  names.cpp  nick.cpp  notice.cpp  oper.cpp  part.cpp  ping.cpp  pong.cpp  privmsg.cpp  quit.cpp  rehash.cpp  restart.cpp  rmmod.cpp  topic.cpp  user.cpp  userhost.cpp  version.cpp  who.cpp  whois.cpp  whowas.cpp
src/cmd/include/: whowas.hpp
src/cmd/include/cmd/: away.hpp  invite.hpp  ison.hpp  join.hpp  kill.hpp  list.hpp  lsmod.hpp  mode.hpp  motd.hpp  names.hpp  nick.hpp  oper.hpp  part.hpp  pong.hpp  restart.hpp  topic.hpp  user.hpp  who.hpp
src/cmds/: user.cpp
src/modules/: m_null.cpp
tools/: versionblast.sh
